ex_2 fix validator

--- a/ex_2.html
+++ b/ex_2.html
@@ -24,7 +24,9 @@
             if (str === "")
                 return false;
             for (i in str) {
-                if (isNaN(parseInt(str[i])) && str[i] !== "-")
+                if (str[i] === "-" && i === "0")  
+                    continue;
+                if (isNaN(parseInt(str[i])))
                     return false;
             }
             return true;
