--- a/slider.html
+++ b/slider.html
@@ -9,22 +9,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"  />
     <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="slider.css" type="text/css">
+    <script src="https://kit.fontawesome.com/9ae9c7c8ec.js" crossorigin="anonymous"></script>
     <script src="slider.js" type="text/javascript">
     </script>
 </head>
 
 <body>
-    <h2>Basic slider</h2>
-    <div id="switch">
-        <div id="1" class="option chosen" onclick="load_img(this)">1</div>
-        <div onclick="load_img(this)" id="2" class="option">2</div>
-        <div onclick="load_img(this)" id="3" class="option">3</div>
-        <div onclick="load_img(this)" id="4" class="option">4</div>
-        <div onclick="load_img(this)" id="5" class="option">5</div>
-    </div>
-    <div id="gallery">
-        <img src="img/1.jpg" width="440px">
-    </div>
+    <header>
+        <h2>Basic slider</h2>
+    </header>
+    <main>
+        <div class="arrow">
+            <i class="fas fa-caret-left"></i>
+        </div>
+        <div id="screen">
+            <div id="switch">
+                <div id="1" class="option chosen" onclick="load_img(this)">1</div>
+                <div onclick="load_img(this)" id="2" class="option">2</div>
+                <div onclick="load_img(this)" id="3" class="option">3</div>
+                <div onclick="load_img(this)" id="4" class="option">4</div>
+                <div onclick="load_img(this)" id="5" class="option">5</div>
+            </div>
+            <div id="gallery">
+                <img src="img/1.jpg" width="440px">
+            </div>
+        </div>
+        <div class="arrow">
+            <i class="fas fa-caret-right"></i>
+        </div>
+    </main>
+    
 </body>
 
 </html>
