slider arrows working

--- a/slider.html
+++ b/slider.html
@@ -28,7 +28,7 @@
         </div>
         <div id="screen">
             <div class="arrow">
-                <i class="fas fa-caret-left"></i>
+                <i onclick="backwards()" class="fas fa-caret-left"></i>
             </div>
             <div id="gallery">
                 <img src="img/1.jpg" width="440px">
