--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta charset="utf-8">
     <title>Slider</title>
 
+    <!-- preload pictures -->
+    <link rel="preload" href="img/1.jpg" as="image">
+    <link rel="preload" href="img/2.jpg" as="image">
+    <link rel="preload" href="img/3.jpg" as="image">
+    <link rel="preload" href="img/4.jpg" as="image">
+    <link rel="preload" href="img/5.jpg" as="image">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"  />
     <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="slider.css" type="text/css">
